# genetics-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  improvements.txt  pyproject.toml  requirements.txt
.beads/: issues.jsonl  metadata.json
.claude/agents/: architecture-explorer.md
docs/: project-spec.md  variant-list-analysis.md
src/genetics_mcp_server/: __init__.py  chat_api.py  cost.py  download_store.py  llm_service.py  logging_config.py  mcp_client.py  mcp_proxy.py  mcp_server.py  rate_limit.py  subagent.py
src/genetics_mcp_server/auth/: __init__.py  core.py  dependencies.py
src/genetics_mcp_server/config/: __init__.py  defaults.py  settings.py
src/genetics_mcp_server/db/: __init__.py  chat_history_db.py  llm_config_db.py  singleton.py
src/genetics_mcp_server/routers/: __init__.py  admin.py  api_tokens.py  chat_history.py  llm_config.py
src/genetics_mcp_server/scripts/: analysis_timeseries.py  analyze_conversations.py  analyze_variants.py  backfill_metrics_dates.py  conversation_prompts.py  plot_conversation_scores.py
src/genetics_mcp_server/skills/: __init__.py  definitions.py  sandbox_tools.py
src/genetics_mcp_server/skills/instructions/: bigquery_analysis.md  data_analysis.md  database_analysis.md  genetics_data_extraction.md  literature_review.md  variant_list_analysis.md
src/genetics_mcp_server/tools/: __init__.py  definitions.py  executor.py  phewas_categories.py  uniprot.py
tests/: conftest.py  test_admin_router.py  test_analysis_timeseries.py  test_analyze_conversations.py  test_bigquery_gene_tools.py  test_chat_api.py  test_chat_history_router.py  test_conversation_analysis_db.py  test_cost.py  test_db.py  test_downloads.py  test_executor_resilience.py  test_gene_group_tools.py  test_llm_config_router.py  test_llm_service.py  test_mcp_server.py  test_myvariant.py  test_phewas_categories.py  test_subagent.py  test_temperature.py  test_tools.py  test_uniprot.py  test_variant_analysis.py
