[project]
name = "genetics-mcp-server"
version = "0.1.0"
description = "MCP server and LLM service for genetics data tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.27.0",
    "httpx==0.28.1",
    "polars==1.40.1",
    "python-dotenv==1.2.2",
    "matplotlib==3.10.9",
    "anthropic==0.97.0",
    "openai==2.33.0",
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "sse-starlette==3.4.1",
    "pydantic==2.13.3",
    "ddgs==9.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genetics_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E501: line too long (handled by formatter)
# E402: module level import not at top of file (load_dotenv must be called before project imports)
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests requiring a running genetics API server",
]
